--- a/Ace/styles.css
+++ b/Ace/styles.css
@@ -104,6 +104,7 @@ nav, footer {
     justify-content: space-between;
     color: #fff;
 }
+
 nav{
     display: flex;
 }
@@ -323,7 +324,7 @@ footer {
     max-width: 90vw;
     width: 100vh;
     height: 60vh;
-    background-color: white;
+    background-color: #f5f5f5;
     border-radius: 35px;
     overflow: hidden;
     opacity: 0;
@@ -338,7 +339,7 @@ footer {
     right: 0;
     width: 50%;
     height: 100%;
-    background-color: rgb(255, 255, 255);
+    background-color: #f5f5f5;
     display: flex;
     align-items: center;
     color: #333;
@@ -365,7 +366,7 @@ form{
 
 .input-box{
     position: relative;
-    margin: 30px;
+    margin: 10px;
 }
 
 .input-box input{
@@ -395,7 +396,7 @@ form{
 }
 
 .forgot-link{
-    margin: -15px 0 15px;
+    margin: 20px 0 15px;
 }
 
 .forgot-link a{
@@ -407,7 +408,7 @@ form{
 .btn {
     width: 85%;
     height: 50px;
-    background: #000000;
+    background: #292929;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, .1);
     border: none;
@@ -459,7 +460,7 @@ form{
     height: 100%;
     left: -250%;
     border-radius: 150px;
-    background: #000000;
+    background: #292929;
     z-index: 2;
     transition: 1.8s ease-in-out;
 }
@@ -564,22 +565,39 @@ form{
     .container-login.active .toggle-painel.toggle-right{
         bottom: 0;
     }
+    .form-box.register{
+
+        width: 100%;
+        height: 62vh;
+    }
+    .forgot-link{margin: -5px 0 15px;}
 }
 
 @media screen and (max-width: 400px) {
     .form-box.login, .form-box.register{
-        padding: 10px;
+        padding: 30px;
     }
 
     .toggle-painel h1{
         font-size: 30px;
     }
-    .social-icons{
-        margin-top: -10px;
+    .social-icons a {
+        font-size: 18px; 
+        padding: 8px; 
+    }
+
+    .input-box i {
+        font-size: 16px; 
     }
     .input-box input{
         margin-bottom: -25px;
     }
+    .input-box input {
+
+        padding: 10px 40px 10px 15px;
+        font-size: 14px; 
+    }
+    .forgot-link{margin: 5px 0 15px;}
     
     
 }
