--- a/ace-web/src/styles/global.scss
+++ b/ace-web/src/styles/global.scss
@@ -2,6 +2,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@700&display=swap');
 @import url('https://fonts.cdnfonts.com/css/valorant');
+@import url('https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css');
 
 * {
     margin: 0;
