--- a/Ace/Settings/style.css
+++ b/Ace/Settings/style.css
@@ -4,6 +4,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: "Rajdhani", sans-serif;
+
   }
 
   body{
@@ -11,13 +12,44 @@
     background: linear-gradient(135deg, rgb(24, 23, 23) 0%, rgb(17, 17, 17) 50%, rgb(15, 15, 15) 100%) 0% 0%;
   }
 
-.container{
-
+  .container {
+    margin: 5% auto 0 auto !important;
     border: 2px solid rgb(223, 76, 76);
+    padding-bottom: 15px;
+    border-radius: 40px;
+   
+}
+h4{
+    margin-top: 15px !important;
+    margin-left: 5px !important;
+}
+.form-control{
+   border-color: #000 !important;
+    color: rgb(0, 0, 0) !important;
+}
+.form-control:focus {
+    border-color: none !important;
+
+    box-shadow: none !important;
+    outline: none !important;
+}
+.custom-select:focus {
+    border-color: none !important;
+    box-shadow: none !important;
+
+    outline: none !important;
+}
+.custom-select{
+    border-color: #000 !important;
 }
 .ui-w-80 {
     width : 80px !important;
     height: auto;
+}
+
+.text-right{
+    margin-bottom: 20px !important;
+    margin-right: 25px !important;
 }
 
 .btn-default {
@@ -25,16 +57,37 @@
     background  : rgba(0, 0, 0, 0);
     color       : #4E5155;
 }
+.btn-primary{
+    background-color: rgb(223, 76, 76) !important;
+    border-color: transparent !important;
+}
+.btn:focus{
+    box-shadow: none !important;
+}
+.btn{
+    background-color: #3b3a3a !important;
+    color: white !important;
+}
+#salvar.btn-primary {
+    background-color: #007bff !important;
+    border-color: transparent !important;
+}
+#excluir-conta.btn-primary {
+    background-color: rgb(223, 76, 76) !important;
+    border-color: transparent !important;
+}
 
 label.btn {
     margin-bottom: 0;
 }
 
 .btn-outline-primary {
-    border-color: #26B4FF;
-    background  : transparent;
-    color       : #26B4FF;
+    border-color: rgb(223, 76, 76) !important;
+    background: transparent !important;
+    color: rgb(223, 76, 76) !important;
 }
+
+
 
 .btn {
     cursor: pointer;
@@ -76,7 +129,9 @@ label.btn {
 h4{
     color: #fff;
 }
-
+.light-style .account-settings-links .list-group-item:hover{
+    background-color: rgba(94, 87, 87, 0.185) !important;
+}
 .account-settings-links .list-group-item.active {
     font-weight: bold !important;
 }
@@ -104,7 +159,7 @@ html:not(.dark-style) .account-settings-links .list-group-item.active {
 }
 
 .material-style .account-settings-links .list-group-item.active {
-    color: #4e5155 !important;
+    color: #000000 !important;
 }
 
 .dark-style .account-settings-links .list-group-item {
@@ -117,7 +172,7 @@ html:not(.dark-style) .account-settings-links .list-group-item.active {
 }
 
 .light-style .account-settings-links .list-group-item.active {
-    color: #4E5155 !important;
+    color: #000000 !important;
 }
 
 .light-style .account-settings-links .list-group-item {
