address user config

--- a/ace-web/src/components/UserSettings/UserSettings.scss
+++ b/ace-web/src/components/UserSettings/UserSettings.scss
@@ -1,4 +1,5 @@
 @use '../../styles/variables' as *;
+@use 'sass:color';
 @import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@700&display=swap');
 
 * {
@@ -360,7 +361,7 @@ body {
             border-color: transparent !important;
 
             &:hover {
-                background-color: darken(#007bff, 10%) !important;
+                background-color: color.adjust(#007bff, $lightness: -10%) !important;
             }
 
             &:disabled {
@@ -374,7 +375,7 @@ body {
             border-color: transparent !important;
 
             &:hover {
-                background-color: darken(rgb(223, 76, 76), 10%) !important;
+                background-color: color.adjust(rgb(223, 76, 76), $lightness: -10%) !important;
             }
         }
 
