--- a/ace-web/src/components/UserProfile/UserProfile.scss
+++ b/ace-web/src/components/UserProfile/UserProfile.scss
@@ -8,7 +8,7 @@
 }
 
 :root {
-    --primary-bg: #171717;
+    --primary-bg: #171717;  
     --secondary-bg: #262626;
     --accent-bg: rgb(223, 76, 76);
 
@@ -26,6 +26,8 @@ body {
 }
 
 .container {
+    max-height: 90vh;
+    overflow-y: auto;
     min-height: 100vh;
     backdrop-filter: blur(20px);
     display: flex;
