--- a/ace-web/src/components/UserSettings/UserSettings.scss
+++ b/ace-web/src/components/UserSettings/UserSettings.scss
@@ -14,16 +14,20 @@ body {
     height: 100%;
     min-height: 100vh;
     overflow-x: hidden;
+    overflow-y: auto;
 }
 
 body {
     background-color: $dark-bg;
+    overflow-y: auto;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .user-settings-container {
+    max-height: 90vh;
+    overflow-y: auto;
     width: 100%;
     max-width: 1000px;
     height: 800px;
@@ -499,7 +503,7 @@ body {
         height: auto;
         max-height: 95vh;
         position: relative;
-        top: 0;
+        top: 10%;
         left: 0;
         transform: none;
         margin: 1rem auto;
@@ -515,6 +519,11 @@ body {
                 padding-right: 0;
             }
         }
+
+        .user-settings-container {
+            margin-top: 10%;  
+        }
+        
 
         .account-settings-links {
             flex-direction: row;
