--- a/ace-web/src/components/AgentListing/AgentListing.scss
+++ b/ace-web/src/components/AgentListing/AgentListing.scss
@@ -23,7 +23,7 @@
     position: absolute;
     left: 0;
     top: 50%;
-    transform: translateY(-50%) translateX(30px) rotate(90deg);
+    transform: translateY(-50%) rotate(90deg);
     transform-origin: center center;
     font-size: 100px;
     letter-spacing: clamp(0.5rem, 1.5vw, 1.8rem);
